Changes for 1.3.3.0
* Fixed remaining unit tests. (veqryn)

* Engine code cleanup. (frigoref)

* Some small fixes for unit tests, and some small abstractions. (frigoref and veqryn)

* Changed combat filters to allow infrastructure with support or combat abilities to take part in combat. (veqryn)

* Fixing some unit tests, creating tests for Revised sub bug. (veqryn)

* Fixed casualty selection hang bug, and also abstracted CasualtyDetails. (veqryn)

* Fixing some unit tests. (veqryn & frigoref)

* Updated all test xmls. (veqryn)

* Fixed bug introduced into undoing moves, where undoing a sea placement generated an error. (frigoref)

* Created new trigger ability to add and remove production rules from a production frontier. (veqryn)

* Beginning work on territory effects, and some cleanup in the use of basedelegate. (edwin van der wal, with help from frigoref and veqryn)

* Adding ability to trigger notification messages to the players. (edwin van der wal)

* Some beginning work on Dynamix AI sea transportation methods. (wisconsin)

* Fixing of some matches to use new relationships, and some general code cleanup. (veqryn)

* Various code cleaning. (frigoref)

* Some changes to how politics gets initialized. (edwin van der wal)

* Cleaning up of relationships, have alliances auto-create relationships based on default war or allied, and creation of relationship interpreter class. (frigoref)

* Allowed basic html to be used inside unit tool tips. (veqryn)

* Created new unit attachment, createsUnitsList, which allows units to create resources like PUs and techTokens each turn for their owner. (veqryn)

* Created framework and objects for having individual relationships between players, rather than set alliances and war as the only option. (edwin van der wal, with some help from frigoref and veqryn)
